--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
                     <p class="hover:underline">Plant a Tree</p>
                 </a>
             </div>
-            <button class="bg-[#FACC15] text-[#15803D] rounded-2xl py-1 px-3 cursor-pointer">Plant a Tree</button>
-
+            <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Plant a Tree</button>
         </nav>
+
+        <div class="flex justify-around items-center text-center bg-[#CFF0DC]">
+            <img src="assets/hero-leaf1.png" alt="">
+            <div class="text-[#1F2937]">
+                <h1 class="text-5xl font-bold">Plant a Tree, Grow a Future</h1>
+                <p class="my-5">Join our mission to plant 1 million trees and make the Earth greener for future <br> generations.</p>
+                <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Get Involved</button>
+            </div>
+            <img src="assets/hero-leaf2.png" alt="">
+        </div>
     </header>
 
 </body>
