left aside done

--- a/index.html
+++ b/index.html
@@ -32,12 +32,36 @@
             <img src="assets/hero-leaf1.png" alt="">
             <div class="text-[#1F2937]">
                 <h1 class="text-5xl font-bold">Plant a Tree, Grow a Future</h1>
-                <p class="my-5">Join our mission to plant 1 million trees and make the Earth greener for future <br> generations.</p>
+                <p class="my-5">Join our mission to plant 1 million trees and make the Earth greener for future <br>
+                    generations.</p>
                 <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Get Involved</button>
             </div>
             <img src="assets/hero-leaf2.png" alt="">
         </div>
     </header>
+
+    <main class="bg-[#F0FDF4]">
+        <h1 class="text-2xl font-semibold text-center pt-15 pb-10">Choose Your Trees</h1>
+        <section class="w-11/12 mx-auto grid grid-cols-12">
+
+            <aside class="col-span-3">
+                <h6 class="text-xl font-semibold">Categories</h6>
+                <ul class="py-5">
+                    <li>All Trees</li>
+                    <li>Fruit Trees</li>
+                    <li>Flowering Trees</li>
+                    <li>Shade Trees</li>
+                    <li>Medicinal Trees</li>
+                    <li>Timber Trees</li>
+                    <li>Evergreen Trees</li>
+                    <li>Ornamental Plants</li>
+                    <li>Bamboo</li>
+                    <li>Climbers</li>
+                    <li>Aquatic Plants</li>
+                </ul>
+            </aside>
+        </section>
+    </main>
 
 </body>
 
