main container done

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
         <div class="flex justify-around items-center text-center bg-[#CFF0DC]">
             <img src="assets/hero-leaf1.png" alt="">
-            <div class="text-[#1F2937]">
+            <div class="">
                 <h1 class="text-5xl font-bold">Plant a Tree, Grow a Future</h1>
-                <p class="my-5">Join our mission to plant 1 million trees and make the Earth greener for future <br>
+                <p class="my-5 text-[#1f293799]">Join our mission to plant 1 million trees and make the Earth greener
+                    for future <br>
                     generations.</p>
                 <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Get Involved</button>
             </div>
@@ -42,9 +43,9 @@
 
     <main class="bg-[#F0FDF4]">
         <h1 class="text-2xl font-semibold text-center pt-15 pb-10">Choose Your Trees</h1>
-        <section class="w-11/12 mx-auto grid grid-cols-12">
+        <section class="w-11/12 mx-auto grid grid-cols-12 gap-5">
 
-            <aside class="col-span-3">
+            <aside class="col-span-2">
                 <h6 class="text-xl font-semibold">Categories</h6>
                 <ul class="py-5">
                     <li>All Trees</li>
@@ -60,7 +61,70 @@
                     <li>Aquatic Plants</li>
                 </ul>
             </aside>
-        </section>
+
+            <section class="col-span-8 grid grid-cols-3 gap-5">
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                            alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p>A card component has a figure, a body part, and inside body there are title and actions parts
+                        </p>
+                        <div class="card-actions justify-between">
+                            <div class="badge bg-[#DCFCE7] text-[#15803D]">Furit Tree</div>
+                            <div class="badge">৳500</div>
+                            <button class="btn w-full bg-[#15803D] text-white rounded-full">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                            alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p>A card component has a figure, a body part, and inside body there are title and actions parts
+                        </p>
+                        <div class="card-actions justify-between">
+                            <div class="badge bg-[#DCFCE7] text-[#15803D]">Furit Tree</div>
+                            <div class="badge">৳500</div>
+                            <button class="btn w-full bg-[#15803D] text-white rounded-full">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                            alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p>A card component has a figure, a body part, and inside body there are title and actions parts
+                        </p>
+                        <div class="card-actions justify-between">
+                            <div class="badge bg-[#DCFCE7] text-[#15803D]">Furit Tree</div>
+                            <div class="badge">৳500</div>
+                            <button class="btn w-full bg-[#15803D] text-white rounded-full">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                            alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p>A card component has a figure, a body part, and inside body there are title and actions parts
+                        </p>
+                        <div class="card-actions justify-between">
+                            <div class="badge bg-[#DCFCE7] text-[#15803D]">Furit Tree</div>
+                            <div class="badge">৳500</div>
+                            <button class="btn w-full bg-[#15803D] text-white rounded-full">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
     </main>
 
 </body>
