--- a/index.html
+++ b/index.html
@@ -125,6 +125,28 @@
                 </div>
             </section>
 
+            <aside class="col-span-2 bg-white py-5 px-5">
+                <h6 class="text-xl font-semibold mb-4">Your Cart</h6>
+
+                <div class="bg-[#F0FDF4] p-3 rounded-md">
+                    <div class="flex justify-between items-center">
+
+                        <div>
+                            <p class="font-semibold">Mango Tree</p>
+                            <p class="text-[#1f293775]">৳500</p>
+                        </div>
+
+                        <button class="text-lg text-[#1f293775] cursor-pointer">x</button>
+                    </div>
+                </div>
+                <div class="border-[#1f293720] border-t mt-4 pt-2 flex justify-between">
+                    <p class="font-semibold">Total:</p>
+                    <p class="font-semibold">৳1000</p>
+                </div>
+            </aside>
+
+        </section>
+
     </main>
 
 </body>
