--- a/index.html
+++ b/index.html
@@ -147,6 +147,34 @@
 
         </section>
 
+        <section class="w-11/12 mx-auto">
+            <h1 class="text-2xl font-semibold text-center pt-20 pb-10">About the Campaign</h1>
+
+            <div class="grid grid-cols-12">
+                <div class="col-span-2"></div>
+                <div class="col-span-8 flex flex-col md:flex-row items-center gap-10 mb-20">
+                    <div class="md:w-1/2">
+                        <img src="assets/about.png" alt="About Campaign" class="w-full rounded-lg shadow-md">
+                    </div>
+                    <div class="md:w-1/2 space-y-4 text-[#1f293799]">
+                        <p>
+                            Green Earth is a global tree plantation initiative dedicated to fighting climate change.
+                            Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you
+                            help restore forests, create habitats for wildlife, and combat global warming.
+                        </p>
+
+                        <ul class="list-disc list-inside space-y-2">
+                            <li>Restoration of natural habitats</li>
+                            <li>Improvement of air quality</li>
+                            <li>Support for local communities</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="col-span-2"></div>
+            </div>
+        </section>
+
     </main>
 
 </body>
