--- a/index.html
+++ b/index.html
@@ -175,6 +175,24 @@
             </div>
         </section>
 
+        <section class="bg-[#CFF0DC] pb-20">
+            <h1 class="text-2xl font-semibold text-center pt-20 pb-10">Our Impact</h1>
+            <div class="flex justify-center text-center gap-10">
+                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg">
+                    <h1 class="text-xl font-semibold text-[#15803D]">500K+</h1>
+                    <p class="text-[#1f2937b8] pt-2">Trees Planted</p>
+                </div>
+                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg">
+                    <h1 class="text-xl font-semibold text-[#15803D]">120+</h1>
+                    <p class="text-[#1f2937b8] pt-2">Communities Involved</p>
+                </div>
+                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg">
+                    <h1 class="text-xl font-semibold text-[#15803D]">30+</h1>
+                    <p class="text-[#1f2937b8] pt-2">Countries Reached</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
