--- a/index.html
+++ b/index.html
@@ -193,6 +193,43 @@
             </div>
         </section>
 
+        <section class="bg-[#166534] pb-20">
+            <h1 class="text-3xl font-semibold text-white text-center pt-20 pb-10">
+                Plant a Tree Today
+            </h1>
+
+            <form action="" class="w-11/12 md:w-1/3 mx-auto bg-[#15803D] p-6 rounded-lg shadow-md space-y-4">
+
+                <div>
+                    <input type="text" id="name" placeholder="Your Name" required
+                        class="w-full px-4 py-2 border rounded-md focus:outline-none bg-white" />
+                </div>
+
+                <div>
+                    <input type="email" id="email" placeholder="example@email.com" required
+                        class="w-full px-4 py-2 border rounded-md focus:outline-none bg-white" />
+                </div>
+
+                <div>
+                    <select id="trees" required
+                        class="w-full px-4 py-2 border rounded-md focus:outline-none bg-white">
+                        <option value="" disabled selected>Number of Trees</option>
+                        <option value="1">1 Tree - $5</option>
+                        <option value="5">5 Trees - $25</option>
+                        <option value="10">10 Trees - $50</option>
+                    </select>
+                </div>
+
+                <button type="submit"
+                    class="w-full bg-[#FACC15] text-[#15803D] font-semibold py-2 rounded-full hover:bg-green-800 hover:text-white cursor-pointer">
+                    Donate Now
+                </button>
+
+            </form>
+        </section>
+
+
+
     </main>
 
 </body>
