footer section done

--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
             </form>
         </section>
 
-
+        <footer class="text-center text-white py-5 bg-[#14532D]">
+            <p>© 2025 Green Earth. All Rights Reserved.</p>
+        </footer>
 
     </main>
 
