--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </section>
 
-            <aside class="col-span-2 bg-white py-5 px-5">
+            <aside class="col-span-2 bg-white py-5 px-5 rounded-lg">
                 <h6 class="text-xl font-semibold mb-4">Your Cart</h6>
 
                 <div class="bg-[#F0FDF4] p-3 rounded-md">
@@ -178,15 +178,15 @@
         <section class="bg-[#CFF0DC] pb-20">
             <h1 class="text-2xl font-semibold text-center pt-20 pb-10">Our Impact</h1>
             <div class="flex justify-center text-center gap-10">
-                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg">
+                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg transition-transform duration-300 hover:scale-105 cursor-pointer">
                     <h1 class="text-xl font-semibold text-[#15803D]">500K+</h1>
                     <p class="text-[#1f2937b8] pt-2">Trees Planted</p>
                 </div>
-                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg">
+                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg transition-transform duration-300 hover:scale-105 cursor-pointer">
                     <h1 class="text-xl font-semibold text-[#15803D]">120+</h1>
                     <p class="text-[#1f2937b8] pt-2">Communities Involved</p>
                 </div>
-                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg">
+                <div class="bg-white py-10 flex-1 max-w-lg rounded-lg transition-transform duration-300 hover:scale-105 cursor-pointer">
                     <h1 class="text-xl font-semibold text-[#15803D]">30+</h1>
                     <p class="text-[#1f2937b8] pt-2">Countries Reached</p>
                 </div>
