--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <nav class="flex justify-around bg-[#15803D] py-5">
-            <h1 class="text-white text-xl font-semibold cursor-pointer">Green Earth</h1>
-            <div class="flex justify-center gap-5 text-white">
+        <nav class="flex flex-col md:flex-row justify-between items-center bg-[#15803D] py-5 px-4 md:px-12 gap-2 md:gap-0">
+            <h1 class="text-white text-xl font-semibold cursor-pointer order-1 md:order-1">Green Earth</h1>
+            <div class="flex flex-col md:flex-row justify-center gap-2 md:gap-5 text-white order-3 md:order-2 w-full md:w-auto text-center">
                 <a href="">
                     <p class="hover:underline">About</p>
                 </a>
@@ -25,42 +25,59 @@
                     <p class="hover:underline">Plant a Tree</p>
                 </a>
             </div>
-            <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Plant a Tree</button>
+            <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer order-2 md:order-3">Plant a Tree</button>
         </nav>
 
-        <div class="flex justify-around items-center text-center bg-[#CFF0DC]">
-            <img src="assets/hero-leaf1.png" alt="">
-            <div>
-                <h1 class="text-5xl font-bold">Plant a Tree, Grow a Future</h1>
-                <p class="my-5 text-[#1f293799]">
+        <!-- Small device hero -->
+        <div class="flex flex-col items-center bg-[#CFF0DC] px-4 py-10 gap-5 md:hidden">
+            <div class="flex justify-center gap-5">
+                <img src="assets/hero-leaf1.png" alt="" class="w-20">
+                <img src="assets/hero-leaf2.png" alt="" class="w-20">
+            </div>
+            <div class="text-center">
+                <h1 class="text-3xl font-bold">Plant a Tree, Grow a Future</h1>
+                <p class="my-3 text-[#1f293799] text-sm">
                     Join our mission to plant 1 million trees and make the Earth greener for future <br>
                     generations.
                 </p>
                 <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Get Involved</button>
             </div>
-            <img src="assets/hero-leaf2.png" alt="">
+        </div>
+
+        <!-- Large device hero -->
+        <div class="hidden md:flex justify-around items-center text-center bg-[#CFF0DC] px-12 gap-8">
+            <img src="assets/hero-leaf1.png" alt="" class="w-auto">
+            <div class="text-center md:w-1/2">
+                <h1 class="text-5xl font-bold">Plant a Tree, Grow a Future</h1>
+                <p class="my-5 text-[#1f293799] text-base">
+                    Join our mission to plant 1 million trees and make the Earth greener for future <br>
+                    generations.
+                </p>
+                <button class="bg-[#FACC15] text-[#15803D] rounded-full py-1 px-3 cursor-pointer">Get Involved</button>
+            </div>
+            <img src="assets/hero-leaf2.png" alt="" class="w-auto">
         </div>
     </header>
 
     <main class="bg-[#F0FDF4]">
         <h1 class="text-2xl font-semibold text-center pt-15 pb-10">Choose Your Trees</h1>
-        <section class="w-11/12 mx-auto grid grid-cols-12 gap-5">
+        <section class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-12 gap-5">
 
             <!-- left aside -->
-            <aside class="col-span-2">
+            <aside class="md:col-span-2 order-1 md:order-1">
                 <h6 class="text-xl font-semibold">Categories</h6>
                 <ul class="py-5" id="category-list">
-                    <!-- categories will come from JS -->
+
                 </ul>
             </aside>
 
             <!-- main container -->
-            <section class="col-span-8 grid grid-cols-3 gap-5" id="tree-cards">
+            <section class="md:col-span-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 order-2 md:order-2" id="tree-cards">
 
             </section>
 
             <!-- right aside -->
-            <aside class="col-span-2 bg-white py-5 px-5 rounded-lg">
+            <aside class="md:col-span-2 bg-white py-5 px-5 rounded-lg order-3 md:order-3">
                 <h6 class="text-xl font-semibold mb-4">Your Cart</h6>
                 <div id="cart-items">
 
@@ -77,12 +94,12 @@
         <section class="w-11/12 mx-auto">
             <h1 class="text-2xl font-semibold text-center pt-20 pb-10">About the Campaign</h1>
             <div class="grid grid-cols-12">
-                <div class="col-span-2"></div>
-                <div class="col-span-8 flex flex-col md:flex-row items-center gap-10 mb-20">
-                    <div class="md:w-1/2">
+                <div class="col-span-2 hidden md:block"></div>
+                <div class="col-span-12 md:col-span-8 flex flex-col md:flex-row items-center gap-10 mb-20">
+                    <div class="w-full md:w-1/2">
                         <img src="assets/about.png" alt="About Campaign" class="w-full rounded-lg shadow-md">
                     </div>
-                    <div class="md:w-1/2 space-y-4 text-[#1f293799]">
+                    <div class="w-full md:w-1/2 space-y-4 text-[#1f293799]">
                         <p>
                             Green Earth is a global tree plantation initiative dedicated to fighting climate change.
                             Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you
@@ -95,22 +112,21 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-span-2"></div>
+                <div class="col-span-2 hidden md:block"></div>
             </div>
         </section>
 
         <!-- impact section -->
         <section class="bg-[#CFF0DC] pb-20">
             <h1 class="text-2xl font-semibold text-center pt-20 pb-10">Our Impact</h1>
-            <div class="flex justify-center text-center gap-10" id="impact-cards">
+            <div class="flex flex-col sm:flex-row justify-center text-center gap-5 sm:gap-10" id="impact-cards">
 
             </div>
         </section>
 
-
         <section class="bg-[#166534] pb-20">
             <h1 class="text-3xl font-semibold text-white text-center pt-20 pb-10">Plant a Tree Today</h1>
-            <form action="" class="w-11/12 md:w-1/3 mx-auto bg-[#15803D] p-6 rounded-lg shadow-md space-y-4">
+            <form action="" class="w-full sm:w-3/4 md:w-1/3 mx-auto bg-[#15803D] p-6 rounded-lg shadow-md space-y-4">
                 <div>
                     <input type="text" id="name" placeholder="Your Name" required
                         class="w-full px-4 py-2 border rounded-md focus:outline-none bg-white" />
